as3/examples/bad/bad17.dj
class C extends Object {
  nat foo(Object o) {
    nat i;
    0;
  }
}
main {
  C o;
  if(o) {1;} else {2;}; //non-nat type in 'if' test
  0;
}
